--- a/_includes/beatrice/03-organisms/02-footer/_footer.scss
+++ b/_includes/beatrice/03-organisms/02-footer/_footer.scss
@@ -57,6 +57,9 @@
   grid-template-columns: 5rem 1fr;
   margin-top: 2rem;
   > a:first-child {
-    padding-right: 1rem;
+    margin-right: 1rem;
+  }
+  .bizlet-logo {
+    background-color: #ffffff;
   }
 }
